--- a/easypmp-django/templates/base.html
+++ b/easypmp-django/templates/base.html
@@ -8,11 +8,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
     {% block css %}
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
@@ -43,17 +38,22 @@
           <div class="collapse navbar-toggleable-xs" id="bs-navbar-collapse-1">
             <nav class="nav navbar-nav">
               <a class="nav-link nav-item" href="{% url 'home' %}">Home</a></li>
-              <a class="nav-link nav-item" href="{% url 'about' %}">About</a></li>
+              <a class="nav-link nav-item" href="{% url 'about' %}">Sobre</a></li>
             </nav>
         
             <nav class="nav navbar-nav pull-right">
               {% if request.user.is_authenticated %}
-                <a class="nav-link nav-item" href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a></li>
-                <a class="nav-link nav-item" href="{% url 'account_logout' %}">{% trans "Logout" %}</a></li>
+                  <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Olá</a>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %}</a></li>                  
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{% url 'account_logout' %}">{% trans "Logout" %}</a></li>
+                  </div>
+                </li>
               {% else %}
                 <a class="nav-link nav-item" href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a></li>
                 <a class="nav-link nav-item" href="{% url 'account_login' %}">{% trans "Log In" %}</a></li>
-              {% endif %}
+              {% endif %}           
             </nav>
           </div>
         </div>
